<resources>
    <string name="app_name">Projet Mobile 4A</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="contacts">Contacts</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="back">Back</string>
    <string name="send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="validate">Validate</string>
    <string name="pseudo">Pseudo</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
</resources>
